--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-spinners": "^0.15.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "youtube-search-api": "^1.2.2",
-    "youtube-video-parser": "^1.0.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
